Remoção da Section History e Refinamentos na Section Services.
Removida a Section History que havia sido implmentada (ela virará a terceira Section - Projects) e realizados refinamentos gerais e melhorias na Section Services.

--- a/index.html
+++ b/index.html
@@ -31,45 +31,6 @@
 
         <!-- Fim da Sessão Home -->
 
-        <!-- Início da Sessão History -->
-
-            <section id="history">
-                <div class="history_container container">
-                    <div class="history_content">
-                        <div class="history_top">
-                            <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
-                            <p class="section_text">
-                                Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade 
-                                de negócio a ser empreendido na região.
-                                <br/><br/>
-                                Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços 
-                                do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas 
-                                para alavancar essa empresa emergente. Sendo assim, a nossa <span class="text_span">vantagem 
-                                competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, 
-                                aplicando diversas práticas bem aceitas pelo mercado, tudo isso sendo realizado com o suporte de 
-                                pessoas capacitadas para tal.
-                                <br/><br/>
-                                Nosso principal <span class="text_span">objetivo</span> é prestar um <span class="text_span">serviço 
-                                com excelência</span>, e é por isso que queremos ser lembrados.
-                                <br/><br/>
-                                Nosso <span class="text_span">foco</span> está voltado para solucionar os problemas de segurança apresentados
-                                pelas empresas contratantes, sendo <span class="text_span">transparente</span> ao ponto de prestar o serviço 
-                                com o máximo de excelência sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante.
-                                <br/><br/>
-                                Entregamos mais <span class="text_span">qualidade</span> pois investimos em treinamento e capacitação dos 
-                                colaboradores, bem como praticamos políticas diferenciadas para retenção de talentos.
-                            </p>
-                        </div>
-                        <div class="history_bottom">
-                            <img src="./images/jpgobbi_logo_withoutbg_cropped.png" width="350" height="350"/>
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-
-        <!-- Fim da Sessão History -->
-
         <!-- Início da Sessão Services -->
 
             <section id="services">
@@ -88,50 +49,56 @@
                         </p>
                     </div>
                     <div class="services_bottom">
-                        <div class="service_item">
+                        <div class="service_item" id="card_1">
                             <div class="icon">
-                                <img src="./vectors/handshake.svg" width="100"/>
+                                <img src="./vectors/handshake.svg"/>
                             </div>
-                            <h2 class="service_item_title"> Deixe pra gente! </h2>
+                            <h2 class="service_item_title"> Deixe conosco </h2>
                             <p class="service_item_text">
                                 Possuímos profissionais especializados para fornecer esse tipo de atendimento. Assim
                                 o contratante não precisa se preocupar com este tipo de serviço secundário e pode se 
                                 focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma. 
                             </p>
                         </div>
-                        <div class="service_item" id="second">
+                        <div class="service_item" id="card_2">
                             <div class="icon">
-                                <img src="./vectors/armed_guard.svg" width="100"/>
+                                <img src="./vectors/armed_guard.svg"/>
                             </div>
                             <h2 class="service_item_title"> Vigilância Armada </h2>
                             <p class="service_item_text">
                                 Disponibilização de vigilantes armados, formados e com as especializações necessárias para o
                                 cumprimento das atribuições elencadas para cada um.
+                                <span class="service_item_span">
                                 Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma 
                                 cobertura de 24 horas 7 dias por semana.
+                                </span>
                             </p>
                         </div>
-                        <div class="service_item">
+                        <div class="service_item" id="card_3">
                             <div class="icon">
-                                <img src="./vectors/unarmed_guard.svg" width="100"/>
+                                <img src="./vectors/unarmed_guard.svg"/>
                             </div>
                             <h2 class="service_item_title"> Portaria Desarmada </h2>
                             <p class="service_item_text">
                                 Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos 
                                 críticos, que não necessitem de vigilantes armados.
+                                <span class="service_item_span">
                                 Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura 
                                 de 24 horas 7 dias por semana.
+                                </span>
                             </p>
                         </div>
-                        <div class="service_item">
+                        <div class="service_item" id="card_4">
                             <div class="icon">
-                                <img src="./vectors/recepcionist.svg" width="100"/>
+                                <img src="./vectors/recepcionist.svg"/>
                             </div>
                             <h2 class="service_item_title"> Recepcionista </h2>
                             <p class="service_item_text">
                                 Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recepção
                                 de pessoas e atendimento telefônico durante o horário de funcioanamento da empresa.
+                                <span class="service_item_span">
                                 Esta modalidade geralmente é utilizada durante o horário comercial.
+                                </span>
                             </p>
                         </div>
                     </div>
