--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                             <p class="service_item_text">
                                 Disponibilização de vigilantes armados, formados e com as especializações necessárias para o
                                 cumprimento das atribuições elencadas para cada um.
-                                <span class="service_item_span">
-                                Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma 
-                                cobertura de 24 horas 7 dias por semana.
-                                </span>
+                                    <span class="service_item_span">
+                                        Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma 
+                                        cobertura de 24 horas 7 dias por semana.
+                                    </span>
                             </p>
                         </div>
                         <div class="service_item" id="card_3">
@@ -82,10 +82,10 @@
                             <p class="service_item_text">
                                 Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos 
                                 críticos, que não necessitem de vigilantes armados.
-                                <span class="service_item_span">
-                                Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura 
-                                de 24 horas 7 dias por semana.
-                                </span>
+                                    <span class="service_item_span">
+                                        Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura 
+                                        de 24 horas 7 dias por semana.
+                                    </span>
                             </p>
                         </div>
                         <div class="service_item" id="card_4">
@@ -96,9 +96,9 @@
                             <p class="service_item_text">
                                 Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recepção
                                 de pessoas e atendimento telefônico durante o horário de funcioanamento da empresa.
-                                <span class="service_item_span">
-                                Esta modalidade geralmente é utilizada durante o horário comercial.
-                                </span>
+                                    <span class="service_item_span">
+                                        Esta modalidade geralmente é utilizada durante o horário comercial.
+                                    </span>
                             </p>
                         </div>
                     </div>
@@ -113,62 +113,59 @@
                 <div class="projects_container container">
                     <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
+                            <p class="section_text">
+                                Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região.
+                                <br/><br/>
+                                Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes,
+                                foi necessario criar vantagens competitivas para alavancar essa empresa emergente.
+                            </p>
                     </div>
                     <div class="all_projects">
                         <div class="project_item">
                             <div class="project_info">
-                                <h1 class="project_title"> Project 1 </h1>
-                                    <h2 class="project_subtitle"> Coding is Love </h2>
-                                        <p class="project_text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                                            laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
+                                <h2 class="project_subtitle"> Vantagem Competitiva </h2>
+                                    <p class="project_text">
+                                        A nossa vantagem competitiva é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas 
+                                        práticas bem aceitas pelo mercado, tudo isso sendo realizado com o suporte de pessoas capacitadas para tal.
+                                    </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg"/>
+                                <img src="./images/security_team.jpg"/>
                             </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
-                                <h1 class="project_title"> Project 2 </h1>
-                                    <h2 class="project_subtitle"> Coding is Love </h2>
-                                        <p class="project_text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                                            laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
+                                <h2 class="project_subtitle"> Objetivo </h2>
+                                    <p class="project_text">
+                                        Prestar um serviço com excelência, e é por isso que queremos ser lembrados.
+                                    </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg"/>
+                                <img src="./images/security_guard.jpg"/>
                             </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
-                                <h1 class="project_title"> Project 3 </h1>
-                                    <h2 class="project_subtitle"> Coding is Love </h2>
-                                        <p class="project_text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                                            laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
+                                <h2 class="project_subtitle"> Foco </h2>
+                                    <p class="project_text">
+                                        Voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo transparente ao ponto
+                                        de prestar o serviço com o máximo de excelência sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante.
+                                    </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg"/>
+                                <img src="./images/security_guard_focused.jpg"/>
                             </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
-                                <h1 class="project_title"> Project 4 </h1>
-                                    <h2 class="project_subtitle"> Coding is Love </h2>
-                                        <p class="project_text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                                            laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
+                                <h2 class="project_subtitle"> Qualidade </h2>
+                                    <p class="project_text">
+                                        Entregamos mais qualidade pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos políticas
+                                        diferenciadas para retenção de talentos.
+                                    </p>
                             </div>
                             <div class="project_image">
-                                <img src="./images/security_guard_scanning.jpg"/>
+                                <img src="./images/guards_team.png"/>
                             </div>
                         </div>
                     </div>
