--- a/index.html
+++ b/index.html
@@ -174,6 +174,32 @@
 
         <!-- Fim da Sessão Projects -->
 
+        <!-- Início da Sessão About -->
+
+            <section id="about">
+                <div class="about_container container">
+                    <div class="column_left">
+                        <div class="company_logo">
+                            <img src="./images/jpgobbi_logo_withoutbg_cropped.png" />
+                        </div>
+                    </div>
+                    <div class="column_right">
+                        <h1 class="section_title"> Sobre <span class="section_title_span">Nós</span> </h1>
+                            <p class="about_section_text">
+                                Nossa missão principal é inserir no mercado um novo conceito na área de segurança privada, proporcionando
+                                aos nossos clientes o conforto de saber que os seus patrimônios estão sendo protegidos do jeito certo. E
+                                para isso, contamos com profissionais altamente capacitados que passam periodicamente por cursos de 
+                                reciclagem para atender as normas existentes nesta área e a mantê-los constantemente atualizados.
+                            </p>
+                    </div>
+                </div>
+            </section>
+
+        <!-- Fim da Sessão About -->
+
+        <!-- Início da Sessão Contact -->
+        <!-- Fim da Sessão About -->
+
             <script type="text/javascript" src="scripts.js"> </script>
             
         </body>
