Implementada inicialmente a Section Contact.
Implementada inicialmente a Section Contact.

--- a/index.html
+++ b/index.html
@@ -198,6 +198,41 @@
         <!-- Fim da Sessão About -->
 
         <!-- Início da Sessão Contact -->
+
+            <section id="contact">
+                <div class="contact_container container">
+                    <div class="contact_top">
+                        <h1 class="section_title"> Fale <span class="section_title_span">Conosco</span> </h1>
+                    </div>
+                    <div class="contact_items">
+                        <div class="contact_item">
+                            <div class="icon"> <img src="https://img.icons8.com/cute-clipart/100/000000/ringing-phone.png"/> </div>
+                            <div class="contact_info">
+                                <h1 class="contact_title"> Telefone </h1>
+                                <h2 class="contact_info"> (54) 9.9957 - 4777 </h2>
+                                <h2 class="contact_info"> (54) 9.9957 - 4777 </h2>
+                            </div>
+                        </div>
+                        <div class="contact_item">
+                            <div class="icon"> <img src="https://img.icons8.com/cute-clipart/100/000000/email-sign.png"/> </div>
+                            <div class="contact_info">
+                                <h1 class="contact_title"> E-Mail </h1>
+                                <h2 class="contact_info"> paulo@jpgobbi.com.br </h2>
+                                <h2 class="contact_info"> henrique@jpgobbi.com.br </h2>
+                            </div>
+                        </div>
+                        <div class="contact_item">
+                            <div class="icon"> <img src="https://img.icons8.com/cute-clipart/100/000000/address.png"/> </div>
+                            <div class="contact_info">
+                                <h1 class="contact_title"> Endereço </h1>
+                                <h2 class="contact_info"> Rua Maringá, 180
+                                    São Marcos, RS  </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         <!-- Fim da Sessão About -->
 
             <script type="text/javascript" src="scripts.js"> </script>
