--- a/index.html
+++ b/index.html
@@ -22,6 +22,55 @@
                     </div>
                 </section>
             <!--- Fim do Código-Fonte da Section: HOME! --->
+
+            <!--- Início do Código-Fonte da Section: SERVICES! --->
+                <section id="services">
+                    <div class="services container">
+                        <div class="services_top">
+                            <h1 class="section_title"> Serv<span class="section_title_span">i</span>ces </h1>
+                                <p class="section_content">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores
+                                    pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam
+                                    officiis dolorum, dolor provident atque molestias voluptatum explicabo!
+                                </p>
+                        </div>
+                        <div class="services_bottom">
+                            <div class="service_item">
+                                <div class="icon"> <img src="https://img.icons8.com/bubbles/100/000000/services.png"/> </div>
+                                    <h2 class="service_subtitle"> Web Design </h2>
+                                        <p class="service_text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
+                                            voluptatem sed architecto placeat beatae tenetur officia quod.
+                                        </p>
+                            </div>
+                            <div class="service_item">
+                                <div class="icon"> <img src="https://img.icons8.com/bubbles/100/000000/services.png"/> </div>
+                                    <h2 class="service_subtitle"> Web Design </h2>
+                                        <p class="service_text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
+                                            voluptatem sed architecto placeat beatae tenetur officia quod.
+                                        </p>
+                            </div>
+                            <div class="service_item">
+                                <div class="icon"> <img src="https://img.icons8.com/bubbles/100/000000/services.png"/> </div>
+                                    <h2 class="service_subtitle"> Web Design </h2>
+                                        <p class="service_text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
+                                            voluptatem sed architecto placeat beatae tenetur officia quod.
+                                        </p>
+                            </div>
+                            <div class="service_item">
+                                <div class="icon"> <img src="https://img.icons8.com/bubbles/100/000000/services.png"/> </div>
+                                    <h2 class="service_subtitle"> Web Design </h2>
+                                        <p class="service_text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
+                                            voluptatem sed architecto placeat beatae tenetur officia quod.
+                                        </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            <!--- Fim do Código-Fonte da Section: SERVICES! --->
         </body>
 
     </html>
