Ajustes no Cabeçalho do HTML.
Ajustes na <head> do HTML e adição de FavIcon e Título pra página.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-                <title> My Website </title>
+                <title> JPGOBBI Segurança Privada </title>
 
                     <link rel="stylesheet" type="text/css" href="./styles.css"/>
+
+                        <link rel="icon" type="image/png" href="./images/jpgobbi_logo_withoutbg_cropped.png"/>
 
         </head>
 
