--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                         <div class="brand">
 
-                            <a href="#hero"> <h1><span>S</span>haif <span>A</span>rfan</h1> </a>
+                            <a href="#hero"> <h1><span>JPGOBBI</span> Segurança Privada</h1> </a>
 
                         </div>
 
