--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@
 
                     <div>
 
-                        <h1> Hello, <span> </span> </h1>
-
-                        <h1> My Name Is <span> </span> </h1>
-
-                        <h1> Arfan <span> </span> </h1>
-
-                            <a href="#projects" type="button" class="cta"> Portfolio </a>
+                        <div class="logo"> </div>            
 
                     </div>
 
