Volta do Título e Botão de Contato na Home.
Reimplementado o Título Principal na Section - Hero (Home) e realizados alguns ajustes;
Voltamos também o botão de Contato;
Refeita a correção de tamanho da BRAND ao dar Resize de Desktop para Tablet.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
 
                     <div>
 
-                        <div class="logo"> </div>            
+                        <h1> Bem-vindo <span> </span> </h1>
+
+                        <h1> ao site da <span> </span> </h1>
+
+                        <h1> JPGOBBI <span> </span> </h1>
+
+                            <a href="#projects" type="button" class="cta"> Portfolio </a>
 
                     </div>
 
