--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                         <h1> JPGOBBI <span> </span> </h1>
 
-                            <a href="#projects" type="button" class="cta"> Portfolio </a>
+                            <a href="#contact" type="button" class="cta"> Contatar </a>
 
                     </div>
 
