Refinamentos finais - Section Header e Home.
Realizados os refinamentos finais nas Sections Header e Home;
Minificação (remoção das Linhas de Gap) do códigos HTML e CSS dessas Sections;
Implementada a Responsividade para o Background(data-after) dos Links do Menu de navegação - Modo Tablet e Mobile, que antes ambos estavam com o mesmo tamanho.

--- a/index.html
+++ b/index.html
@@ -5,87 +5,50 @@
         <head>
 
             <meta charset="UTF-8"/>
-
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
                 <title> JPGOBBI Segurança Privada </title>
-
                     <link rel="stylesheet" type="text/css" href="./styles.css"/>
-
-                        <link rel="icon" type="image/png" href="./images/jpgobbi_logo_withoutbg_cropped.png"/>
+                    <link rel="icon" type="image/png" href="./images/jpgobbi_logo_withoutbg_cropped.png"/>
 
         </head>
 
         <body>
 
-            <!-- Header -->
-
+            <!-- Main Header Menu -->
             <section id="header">
-
                 <div class="header container">
-
                     <div class="nav-bar">
-
                         <div class="brand">
-
-                            <a href="#hero"> <h1><span>JPGOBBI</span> Segurança Privada</h1> </a>
-
+                            <a href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a>
                         </div>
-
                         <div class="nav-list">
-
                             <div class="hamburger">
-
                                 <div class="bar"> </div>
-
                             </div>
-
                                 <ul>
-
                                     <li> <a href="#hero" data-after="Início"> Início </a> </li>
-
                                     <li> <a href="#services" data-after="Serviços"> Serviços </a> </li>
-
                                     <li> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
-
                                     <li> <a href="#about" data-after="Direção"> Direção </a> </li>
-
                                     <li> <a href="#contact" data-after="Contato"> Contato </a> </li>
-
                                 </ul>
-
                         </div>
-
                     </div>
-
                 </div>
-
             </section>
-
-            <!-- End Header -->
+            <!-- End Main Header Menu -->
 
             <!-- Hero Section -->
-
             <section id="hero">
-
                 <div class="hero container">
-
                     <div>
-
                         <h1> Bem-vindo <span> </span> </h1>
-
                         <h1> ao site da <span> </span> </h1>
-
                         <h1> JPGOBBI <span> </span> </h1>
-
                             <a href="#contact" type="button" class="cta"> Contatar </a>
-
                     </div>
-
                 </div>
-
             </section>
-
             <!-- End Hero Section -->
 
             <!-- Service Section -->
