Implementação dos conteúdos na Section - Services.
Implementados os conteúdos e ajustes inicias na Section - Services.

--- a/index.html
+++ b/index.html
@@ -52,105 +52,58 @@
             <!-- End Hero Section -->
 
             <!-- Service Section -->
-
             <section id="services">
-
                 <div class="services container">
-
                     <div class="service-top">
-
-                        <h1 class="section-title">Serv<span>i</span>ces</h1>
-
+                        <h1 class="section-title"> Nossos <span>Serviços</span> </h1>
                             <p>
-
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores
-                                pariatur assumenda quas magni et, coloribus quad voluptate quase molestiae magnum
-                                officiis dolorum, dolor provident atque molestias voluptatum explicabo!
-
+                                &nbsp;&nbsp;&nbsp; A prestação de serviços na área de segurança privada, além de tratar da segurança física de 
+                                bens, patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção das empresas.
                             </p>
-
+                            <p>
+                                &nbsp;&nbsp;&nbsp;A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
+                                e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma pessoa a imagem da 
+                                empresa como um todo fica desgastada, por isso é importante ter pessoas especializadas para que a empresa 
+                                seja bem vista desde o seu portão de entrada.
+                            </p>
                     </div>
-
                     <div class="service-bottom">
-
-                        <div class="service-item">
-
-                            <div class="icon">
-
-                                <img src="https://img.icons8.com/bubbles/100/000000/services.png"/>
-
-                            </div>
-
-                            <h2> Web Design </h2>
-
-                            <p>
-
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
-                                voluptatem sed architecto placeat beatae tenetur officia quod
-                            </p>
-
+                        <div class="service-item first">
+                            <div class="item-icon icon-first"> </div>
+                                <h2> Profissionalismo </h2>
+                                    <p class="service-item-text">
+                                        Possuímos profissionais especializados para fornecer esse tipo de atendimento. Assim o contratante não precisa se preocupar com este tipo de 
+                                        serviço secundário e pode se focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma.
+                                    </p>
                         </div>
-
-                        <div class="service-item">
-
-                            <div class="icon">
-
-                                <img src="https://img.icons8.com/bubbles/100/000000/services.png"/>
-
-                            </div>
-
-                            <h2> Web Design </h2>
-
-                            <p>
-
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
-                                voluptatem sed architecto placeat beatae tenetur officia quod
-                            </p>
-
+                        <div class="service-item second">
+                            <div class="item-icon icon-second"> </div>
+                                <h2> Vigilância Armada </h2>
+                                    <p class="service-item-text">
+                                        Disponibilização de vigilantes armados formados e com as especializações necessárias para o cumprimento das atribuições elencadas para cada um.
+                                            <span class="service-item-span">Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
+                                    </p>
                         </div>
-
-                        <div class="service-item">
-
-                            <div class="icon">
-
-                                <img src="https://img.icons8.com/bubbles/100/000000/services.png"/>
-
-                            </div>
-
-                            <h2> Web Design </h2>
-
-                            <p>
-
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
-                                voluptatem sed architecto placeat beatae tenetur officia quod
-                            </p>
-
+                        <div class="service-item third">
+                            <div class="item-icon icon-third"> </div>
+                                <h2> Portaria Desarmada </h2>
+                                    <p class="service-item-text">
+                                        Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos críticos, que não necessitem de vigilantes armados.
+                                            <span class="service-item-span">Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
+                                    </p>
                         </div>
-
-                        <div class="service-item">
-
-                            <div class="icon">
-
-                                <img src="https://img.icons8.com/bubbles/100/000000/services.png"/>
-
-                            </div>
-
-                            <h2> Web Design </h2>
-
-                            <p>
-
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni
-                                voluptatem sed architecto placeat beatae tenetur officia quod
-                            </p>
-
+                        <div class="service-item four">
+                            <div class="item-icon icon-four"> </div>
+                                <h2> Recepcionista </h2>
+                                    <p class="service-item-text">
+                                        Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recpção de pessoas e atendimento telefônico durante o 
+                                        horário de funcioanamento da empresa.
+                                            <span class="service-item-span">Esta modalidade geralmente é utilizada durante o horário comercial.</span>
+                                    </p>
                         </div>
-
                     </div>
-
                 </div>
-
             </section>
-            
             <!-- End Service Section -->
 
             <!-- Projects Section -->
